# aiotube-shorts

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
aiotube-shorts/: https.py
